--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,6 @@ node_js:
 branches:
   only:
     - master
+
+before_script:
+  - echo "INSTRUMENTS_HOSTNAME=localhost\nINSTRUMENTS_PORT=3000" >> .env
